# sentinel-hackfest-mono-repo

./: README.md
.github/workflows/: azure-static-web-apps-wonderful-forest-0aa21e80f.yml  hackfest-container-AutoDeployTrigger-bef1dc4d-3c44-4071-936e-e463048a86fd.yml  hackfest-frontend-AutoDeployTrigger-876cc5b3-426b-44de-86c5-da663513f1f8.yml
Backend/: .gitignore  Dockerfile  ESCALATION_DEMO_GUIDE.md  FRONTEND_INTEGRATION.md  PERSONALISED_RAG_IMPLEMENTATION.md  STREAMING_IMPLEMENTATION.md  main.py  pyproject.toml
Backend/agents/: __init__.py  graph.py  models.py  nodes.py  prompts.py  states.py  utils.py
Backend/data/: Payment_Information.json  Policies_&_Terms.json  faq.csv  product_specification_and_information.json  product_specs.md  return_policy.md  shipping_info.txt
Backend/data/personalised_agent/: addresses.csv  cart.csv  order_items.csv  orders.csv  returns.csv  transactions.csv  user_info.csv
Backend/utils/database/: __init__.py  db.py  models.py
Frontend/: .dockerignore  .oryx-build.sh  Dockerfile  package-lock.json  package.json
Frontend/app/: globals.css
Frontend/components/: chatbot-page.tsx  login-page.tsx
